--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Relational Model</title>
     <script type="module" src="input.js"></script>
     <script src="addcom.js" defer></script>
     <script src="addact.js" defer></script>
