remove viz color and test

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       justify-content: flex-start;
     }
     .node {
-      fill: chartreuse;
+      /* fill: chartreuse; */
       stroke: black;
       stroke-width: 2px;
     }
