node color white

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       justify-content: flex-start;
     }
     .node {
-      /* fill: chartreuse; */
+      fill: white;
       stroke: black;
       stroke-width: 2px;
     }
