add number of elements in the visualisation and change 'number' into 'count'

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           ELEMENT
         </div>
         <div class="anno_block">Type:</div>
-        <div class="anno_block">Number:</div>
+        <div class="anno_block">Count:</div>
         <div class="anno_action">
           <div class="anno_block">Action:</div>
           <div
@@ -182,7 +182,7 @@
             <div class="anno_block">Access:</div>
             <div class="anno_block">&nbsp</div>
             <div class="anno_block" style="margin-top: 5px">Configuration:</div>
-            <div class="anno_block" style="margin-top: 4px">Number:</div>
+            <div class="anno_block" style="margin-top: 4px">Count:</div>
             <div class="anno_block" style="margin-top: 4px">Effect:</div>
           </div>
         </div>
