--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relational Model</title>
-    <script src="/node_modules/jspdf/dist/jspdf.umd.min.js"></script>
-    <script src="/node_modules/svg2pdf.js/dist/svg2pdf.umd.min.js"></script>    
+    <script src="node_modules/jspdf/dist/jspdf.umd.min.js"></script>
+    <script src="node_modules/svg2pdf.js/dist/svg2pdf.umd.min.js"></script>    
 
     <script type="module" src="input.js"></script>
     <script type="module" src="permutate.js"></script>
