update input area and display the selected interaction from the database

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </div>
           </div>
           <div class="add_action">
-            <button name="add_action" onclick="addAction(this)">
+            <button id="add_action" onclick="addAction(this)">
               add action
             </button>
           </div>
