add button to open new empty page

--- a/index.html
+++ b/index.html
@@ -186,9 +186,10 @@
   <body>
     <div id="select">
       <select id="select_interaction" name="interaction_ids">
-        <option value="">--Select an interaction from the database--</option>
+        <option value="0">--Select an interaction from the database--</option>
       </select>
       <button id="display_interaction">display interaction</button>
+      <button id="open_new" style="float: right;">open a new empty page</button>
     </div>
     <div id="input">
       <!-- annotation -->
