--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       margin-bottom: 5px; */
       margin-right: 8px;
       padding: 7px;
-      width: 295px;
+      width: 335px;
       height: auto;
       /* border: 1px solid; */
       background-color: rgb(220, 220, 220);
@@ -129,7 +129,6 @@
     .add_action {
       width: 80px;
     }
-    .anno_com,
     .anno_action {
       display: inline-flex;
       flex-direction: column;
@@ -140,17 +139,41 @@
       height: auto;
       /* border: 1px solid red; */
     }
+    .com {
+      display: flex;
+      width: auto;
+      height: auto;
+      padding: 0px;
+      /* border: 1px solid red; */
+    }
+    .an_com,
     .add_communication,
     .communications {
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
       margin: 5px;
+      margin-left: 0;
       padding: 5px;
-      width: 255px;
+      width: 250px;
       height: auto;
       /* border: 1px solid yellowgreen; */
       background-color: white;
+    }
+    .an_com {
+      background-color: rgb(220, 220, 220);
+      margin-right: 0;
+      padding-left: 0;
+      width: 63px;
+    }
+    .ancom_block {
+      font-size: 16px;
+      width: 65px;
+      height: auto;
+      /* border: 1px solid; */
+      margin: 6px 0 5px 0;
+      text-align: right;
+      vertical-align: bottom;
     }
     #config_from,
     #config_to {
@@ -188,8 +211,8 @@
       <select id="select_interaction" name="interaction_ids">
         <option value="0">--Select an interaction from the database--</option>
       </select>
-      <button id="display_interaction">display interaction</button>
-      <button id="open_new" style="float: right;">open a new empty page</button>
+      <!-- <button id="display_interaction">display interaction</button> -->
+      <button id="open_new" style="float: right">open a new empty page</button>
     </div>
     <div id="input">
       <!-- annotation -->
@@ -204,16 +227,6 @@
             ACTION:
           </div>
           <div class="anno_block">&nbsp</div>
-          <div class="anno_com">
-            <div class="anno_block">To:</div>
-            <div class="anno_block">Means:</div>
-            <div class="anno_block">&nbsp</div>
-            <div class="anno_block">Access:</div>
-            <div class="anno_block">&nbsp</div>
-            <div class="anno_block" style="margin-top: 5px">Configuration:</div>
-            <div class="anno_block" style="margin-top: 4px">Count:</div>
-            <div class="anno_block" style="margin-top: 4px">Effect:</div>
-          </div>
         </div>
       </div>
       <!-- first element -->
@@ -227,60 +240,72 @@
               <label for="actionV" id="actionIn">1</label>
               <input id="actionV" />
             </div>
-            <div class="act_block">COMMUNICATION:</div>
+            <div class="act_block" style="width: 98%;">COMMUNICATION:</div>
             <!-- action1_Communication1 -->
-            <div class="communications">
-              <div class="block">
-                <select id="to" name="to_elements" style="float: left">
-                  <option value="">--To which element--</option>
-                  <option value="1">#1</option>
-                </select>
-                <span hidden id="comIn">0</span>
+            <div class="com">
+              <div class="an_com">
+                <div class="ancom_block">To:</div>
+                <div class="ancom_block">Means:</div>
+                <div class="ancom_block">&nbsp</div>
+                <div class="ancom_block">Access:</div>
+                <div class="ancom_block">&nbsp</div>
+                <div class="ancom_block">Config:</div>
+                <div class="ancom_block">Count:</div>
+                <div class="ancom_block">Effect:</div>
               </div>
-              <div class="block">
-                <input
-                  type="radio"
-                  id="direct_means"
-                  name="means"
-                  value="direct"
-                  checked
-                /><label for="direct_means">Direct</label>
+              <div class="communications">
+                <div class="block">
+                  <select id="to" name="to_elements" style="float: left">
+                    <option value="">--To which element--</option>
+                    <option value="1">#1</option>
+                  </select>
+                  <span hidden id="comIn">0</span>
+                </div>
+                <div class="block">
+                  <input
+                    type="radio"
+                    id="direct_means"
+                    name="means"
+                    value="direct"
+                    checked
+                  /><label for="direct_means">Direct</label>
+                </div>
+                <div class="block">
+                  <input
+                    type="radio"
+                    id="via_means"
+                    name="means"
+                    value="via"
+                  /><label for="via_means">Via </label>
+                  <select id="via" name="via_elements">
+                    <option value="">--Select an element--</option>
+                    <option value="1">#1</option>
+                  </select>
+                </div>
+                <div class="block">
+                  <input
+                    type="radio"
+                    id="public_access"
+                    name="access"
+                    value="public"
+                    checked
+                  /><label for="public_access">Public</label>
+                </div>
+                <div class="block">
+                  <input
+                    type="radio"
+                    id="private_access"
+                    name="access"
+                    value="private"
+                  /><label for="private_access">Private</label>
+                </div>
+                <div class="block">
+                  <input id="config_from" /><span>to</span
+                  ><input id="config_to" />
+                </div>
+                <div class="block"><input id="com_num" /></div>
+                <div class="block"><input id="effect" /></div>
               </div>
-              <div class="block">
-                <input
-                  type="radio"
-                  id="via_means"
-                  name="means"
-                  value="via"
-                /><label for="via_means">Via </label>
-                <select id="via" name="via_elements">
-                  <option value="">--Select an element--</option>
-                  <option value="1">#1</option>
-                </select>
-              </div>
-              <div class="block">
-                <input
-                  type="radio"
-                  id="public_access"
-                  name="access"
-                  value="public"
-                  checked
-                /><label for="public_access">Public</label>
-              </div>
-              <div class="block">
-                <input
-                  type="radio"
-                  id="private_access"
-                  name="access"
-                  value="private"
-                /><label for="private_access">Private</label>
-              </div>
-              <div class="block">
-                <input id="config_from" /><span>to</span
-                ><input id="config_to" />
-              </div>
-              <div class="block"><input id="com_num" /></div>
-              <div class="block"><input id="effect" /></div>
             </div>
             <div class="add_communication">
               <button id="add_com" onclick="addCommunication(this)">
