add count related drop down lists and fix element type drop down list

--- a/index.html
+++ b/index.html
@@ -232,15 +232,32 @@
       <!-- first element -->
       <div class="element">
         <div class="block"><span id="index">#1</span></div>
-        <div class="block"><input list="existTypes" id="type" /><datalist id="existTypes"></datalist></div>
-        <div class="block"><input list="eCount" id="ele_num" /><datalist id="eCount"></datalist></div>
+        <div class="block">
+          <input list="existTypes" id="type" /><datalist
+            id="existTypes"
+          ></datalist>
+        </div>
+        <div class="block">
+          <input list="eCount" id="ele_num" /><datalist id="eCount">
+            <option value="1"></option>
+            <option value="2"></option>
+            <option value="3"></option>
+            <option value="4"></option>
+            <option value="5"></option>
+            <option value="1+"></option>
+            <option value="2+"></option>
+            <option value="3+"></option>
+            <option value="4+"></option>
+            <option value="5+"></option>
+          </datalist>
+        </div>
         <div class="allactions">
           <div class="action">
             <div class="act_block">
               <label for="actionV" id="actionIn">1</label>
               <input id="actionV" />
             </div>
-            <div class="act_block" style="width: 98%;">COMMUNICATION:</div>
+            <div class="act_block" style="width: 98%">COMMUNICATION:</div>
             <!-- action1_Communication1 -->
             <div class="com">
               <div class="an_com">
@@ -300,10 +317,10 @@
                   /><label for="private_access">Private</label>
                 </div>
                 <div class="block">
-                  <input id="config_from" /><span>to</span
-                  ><input id="config_to" />
+                  <input list="eCount" id="config_from" /><span>to</span
+                  ><input list="eCount" id="config_to" />
                 </div>
-                <div class="block"><input id="com_num" /></div>
+                <div class="block"><input list="eCount" id="com_num" /></div>
                 <div class="block"><input id="effect" /></div>
               </div>
             </div>
