--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
   </head>
   <style>
     body {
+      font-family: "Courier New", Courier, monospace;
+      font-size: 20px;
       width: auto;
       height: auto;
-      margin: 20px;
+      padding: 0;
+      margin: 0;
+      margin: 0;
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -45,11 +49,25 @@
       padding: 0;
     }
     #select {
-      margin-bottom: 15px;
+      position: fixed;
+      z-index: 100;
+      box-sizing: border-box;
+      width: 100%;
+      margin: 0;
+      padding: 15px;
+      background-color: white;
+    }
+    #element_list {
+      font-size: 22px;
+      font-weight: bold;
+      margin: 0;
+      padding: 10px 3px 5px 3px;
+    }
+    #spacer {
+      width: 100%;
+      height: 70px;
     }
     #input {
-      font-family: "Courier New", Courier, monospace;
-      font-size: 20px;
       display: inline-flex;
       width: auto;
       height: auto;
@@ -78,7 +96,6 @@
     .element,
     .annotation,
     .add_element {
-      /* position: absolute; */
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -91,15 +108,16 @@
       border: 0;
       text-align: right;
       vertical-align: bottom;
-      margin-right: 0;
-      padding-right: 3px;
+      padding: 13px 0 0 0;
+      margin: 0;
+      background-color: white;
     }
     .add_element {
       padding-top: 15px;
-      width: auto;
+      /* width: auto; */
     }
     #add_element {
-      font-size: 20px;
+      font-size: 18px;
       padding: 10px;
     }
     .allactions {
@@ -152,6 +170,7 @@
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
+      font-size: 16px;
       margin: 5px;
       margin-left: 0;
       padding: 5px;
@@ -171,7 +190,7 @@
       width: 65px;
       height: auto;
       /* border: 1px solid; */
-      margin: 6px 0 5px 0;
+      margin: 4px 0 5px 0;
       text-align: right;
       vertical-align: bottom;
     }
@@ -179,6 +198,7 @@
     #config_to {
       width: 53px;
     }
+    .stick_block,
     .anno_block,
     .act_block,
     .block {
@@ -187,11 +207,15 @@
       /* border: 1px solid; */
       margin: 3px;
     }
+    .stick_block {
+      position: sticky;
+      left: 135px;
+    }
     .act_block {
       width: 290px;
     }
     .anno_block {
-      width: 200px;
+      width: 120px;
     }
     #index {
       text-align: center;
@@ -199,6 +223,7 @@
       font-weight: bold;
     }
     #container {
+      margin: 0 15px 0 25px;
       border: 2px solid;
     }
     #save {
@@ -208,40 +233,64 @@
   </style>
   <body>
     <div id="select">
-      <select
-        id="select_interaction"
-        name="interaction_ids"
-        style="width: 350px; text-align: center;"
-      >
-        <option value="0">--Select an interaction from the database--</option>
-      </select>
-      <!-- <button id="display_interaction">display interaction</button> -->
-      <button id="open_new" style="float: right">open a new empty page</button>
+      <div>
+        <select
+          id="select_interaction"
+          name="interaction_ids"
+          style="width: 400px; text-align: center; font-size: 18px"
+        >
+          <option value="0">--Select an interaction from the database--</option>
+        </select>
+        <span>Or</span>
+        <input
+          id="name_interaction"
+          style="width: 400px; text-align: center; font-size: 18px"
+          placeholder="Please name the current worksheet"
+        />
+        <button id="open_new" style="float: right; font-size: 18px">
+          Open a new worksheet
+        </button>
+      </div>
+      <!-- <div id="element_list">#Show elements#</div> -->
     </div>
+    <div id="spacer"></div>
     <div id="input">
-      <!-- annotation -->
-      <div class="annotation">
-        <div class="anno_block" style="font-size: 22px; font-weight: bold">
-          ELEMENT
-        </div>
-        <div class="anno_block">Type:</div>
-        <div class="anno_block">Count:</div>
-        <div class="anno_action">
+      <div
+        class="add_element"
+        style="
+          width: 125px;
+          flex-shrink: 0;
+          border: 0;
+          margin: 0 0 0 10px;
+          padding: 2px 0 0 0;
+          position: sticky;
+          left: 0;
+          z-index: 80;
+        "
+      >
+        <!-- annotation -->
+        <div class="annotation">
           <div class="anno_block" style="font-size: 22px; font-weight: bold">
-            ACTION:
+            ELEMENT
           </div>
-          <div class="anno_block">&nbsp</div>
+          <div class="anno_block">Type:</div>
+          <div class="anno_block">Count:</div>
+          <div class="anno_action">
+            <div class="anno_block" style="font-size: 22px; font-weight: bold">
+              ACTION:
+            </div>
+          </div>
         </div>
       </div>
       <!-- first element -->
       <div class="element">
-        <div class="block"><span id="index">#1</span></div>
-        <div class="block">
+        <div class="stick_block"><span id="index">#1</span></div>
+        <div class="stick_block">
           <input list="existTypes" id="type" /><datalist
             id="existTypes"
           ></datalist>
         </div>
-        <div class="block">
+        <div class="stick_block">
           <input list="eCount" id="ele_num" /><datalist id="eCount">
             <option value="1"></option>
             <option value="2"></option>
@@ -330,20 +379,20 @@
             </div>
             <div class="add_communication">
               <button id="add_com" onclick="addCommunication(this)">
-                add communication
+                Add communication
               </button>
             </div>
           </div>
           <div class="add_action">
             <button id="add_action" onclick="addAction(this)">
-              add action
+              Add action
             </button>
           </div>
         </div>
       </div>
       <!-- add element -->
       <div class="add_element">
-        <button id="add_element" onclick="addElement(this)">add element</button>
+        <button id="add_element" onclick="addElement(this)">Add element</button>
       </div>
     </div>
     <div id="controls">
@@ -357,7 +406,13 @@
         <button class="control_button" id="permutate">Permutate</button>
       </div>
       <div class="control_block">
-        <button class="control_button" id="submit" style="background-color:rgb(202, 245, 202)">Save</button>
+        <button
+          class="control_button"
+          id="submit"
+          style="background-color: rgb(202, 245, 202)"
+        >
+          Save
+        </button>
       </div>
     </div>
     <svg id="container" width="960" height="679"></svg>
