--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="addcom.js" defer></script>
     <script src="addact.js" defer></script>
     <script src="addele.js" defer></script>
+    <script src="interface.js" defer></script>
     <script type="module" src="savepdf.js"></script>
     <script type="module" src="script.js" defer></script>
   </head>
@@ -53,19 +54,42 @@
       z-index: 100;
       box-sizing: border-box;
       width: 100%;
+      height: 80px;
+      overflow: visible;
       margin: 0;
       padding: 15px;
       background-color: white;
     }
+    #show_elements {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 16px;
+      display: inline-flex;
+      flex-direction: column;
+      justify-content: flex-start;
+    }
     #element_list {
-      font-size: 22px;
-      font-weight: bold;
-      margin: 0;
-      padding: 10px 3px 5px 3px;
+      font-size: 16px;
+      margin: 10px 0 0 0;
+      padding: 0;
+      border: none;
+      background-color: white;
+      text-decoration: underline;
+    }
+    #element_list:hover {
+      cursor: pointer;
+    }
+    #all_elements {
+      /* display: inline-flex; */
+      flex-direction: column;
+      justify-content: flex-start;
+      padding: 5px;
+      display: none;
+      background-color: white;
+      border: 1px solid black;
     }
     #spacer {
       width: 100%;
-      height: 70px;
+      height: 90px;
     }
     #input {
       display: inline-flex;
@@ -93,9 +117,19 @@
       padding: 10px;
       width: 125px;
     }
+    .element_info {
+      position: fixed;
+      z-index: 50;
+      font-size: 12px;
+      padding: 2px;
+      width: auto;
+      height: auto;
+      background-color: blanchedalmond;
+    }
     .element,
     .annotation,
     .add_element {
+      position: relative;
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -131,6 +165,7 @@
     }
     .add_action,
     .action {
+      position: relative;
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -167,6 +202,7 @@
     .an_com,
     .add_communication,
     .communications {
+      position: relative;
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -198,7 +234,6 @@
     #config_to {
       width: 53px;
     }
-    .stick_block,
     .anno_block,
     .act_block,
     .block {
@@ -206,10 +241,6 @@
       height: auto;
       /* border: 1px solid; */
       margin: 3px;
-    }
-    .stick_block {
-      position: sticky;
-      left: 135px;
     }
     .act_block {
       width: 290px;
@@ -229,6 +260,15 @@
     #save {
       width: 964px;
       margin-top: 8px;
+    }
+    .close {
+      position: absolute;
+      right: 5px;
+      top: 5px;
+      width: 20px;
+      height: 20px;
+      text-align: center;
+      background: none;
     }
   </style>
   <body>
@@ -251,7 +291,12 @@
           Open a new worksheet
         </button>
       </div>
-      <!-- <div id="element_list">#Show elements#</div> -->
+      <div id="show_elements">
+        <button id="element_list" onclick="showAll(this)">
+          Show all elements
+        </button>
+        <div id="all_elements"></div>
+      </div>
     </div>
     <div id="spacer"></div>
     <div id="input">
@@ -263,8 +308,8 @@
           border: 0;
           margin: 0 0 0 10px;
           padding: 2px 0 0 0;
-          position: sticky;
-          left: 0;
+          /* position: sticky;
+          left: 0; */
           z-index: 80;
         "
       >
@@ -283,15 +328,31 @@
         </div>
       </div>
       <!-- first element -->
-      <div class="element">
-        <div class="stick_block"><span id="index">#1</span></div>
-        <div class="stick_block">
-          <input list="existTypes" id="type" /><datalist
-            id="existTypes"
-          ></datalist>
+      <div
+        class="element"
+        onmouseenter="showElementInfo(event, this)"
+        onmouseleave="hideElementInfo(this)"
+      >
+        <button
+          class="close"
+          name="delete_element"
+          onclick="deleteElement(this)"
+        >
+          X
+        </button>
+        <div class="element_info"></div>
+        <div class="block"><span id="index">#1</span></div>
+        <div class="block">
+          <input
+            list="existTypes"
+            id="type"
+            placeholder="Type/role (if applicable)"
+          /><datalist id="existTypes"></datalist>
         </div>
-        <div class="stick_block">
-          <input list="eCount" id="ele_num" /><datalist id="eCount">
+        <div class="block">
+          <input list="eCount" id="ele_num" placeholder="Count" /><datalist
+            id="eCount"
+          >
             <option value="1"></option>
             <option value="2"></option>
             <option value="3"></option>
@@ -306,9 +367,16 @@
         </div>
         <div class="allactions">
           <div class="action">
+            <button
+              class="close"
+              name="delete_action"
+              onclick="deleteAction(this)"
+            >
+              X
+            </button>
             <div class="act_block">
               <label for="actionV" id="actionIn">1</label>
-              <input id="actionV" />
+              <input id="actionV" placeholder="Action" />
             </div>
             <div class="act_block" style="width: 98%">COMMUNICATION:</div>
             <!-- action1_Communication1 -->
@@ -324,6 +392,9 @@
                 <div class="ancom_block">Effect:</div>
               </div>
               <div class="communications">
+                <button class="close" id="delete_com" onclick="deleteCom(this)">
+                  X
+                </button>
                 <div class="block">
                   <select id="to" name="to_elements" style="float: left">
                     <option value="">--To which element--</option>
