--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
       height: auto;
       /* border: 1px solid; */
       background-color: rgb(220, 220, 220);
+      font-size: 16px;
     }
     .add_action {
       width: 80px;
@@ -206,7 +207,6 @@
       display: inline-flex;
       flex-direction: column;
       justify-content: flex-start;
-      font-size: 16px;
       margin: 5px;
       margin-left: 0;
       padding: 5px;
@@ -243,7 +243,7 @@
       margin: 3px;
     }
     .act_block {
-      width: 290px;
+      width: 98%;
     }
     .anno_block {
       width: 120px;
@@ -263,10 +263,11 @@
     }
     .close {
       position: absolute;
-      right: 5px;
-      top: 5px;
-      width: 20px;
-      height: 20px;
+      padding: 0;
+      right: 3px;
+      top: 3px;
+      width: 18px;
+      height: 18px;
       text-align: center;
       background: none;
     }
@@ -375,10 +376,29 @@
               X
             </button>
             <div class="act_block">
+              <span>If </span
+              ><select
+                class="if_ele"
+                style="width: 80px"
+                onchange="condition(this)"
+              >
+                <option value="">Element</option>
+                <option value="0">Self-initiated</option>
+                <option value="1">#1</option>
+              </select>
+              <div id="perform" style="display: inline">
+                <span> performs </span>
+                <select class="if_act" style="width: 110px">
+                  <option value="">Action</option>
+                </select>
+              </div>
+            </div>
+            <div class="act_block">
+              <span>then:</span>
               <label for="actionV" id="actionIn">1</label>
               <input id="actionV" placeholder="Action" />
             </div>
-            <div class="act_block" style="width: 98%">COMMUNICATION:</div>
+            <div class="act_block">COMMUNICATION:</div>
             <!-- action1_Communication1 -->
             <div class="com">
               <div class="an_com">
