add condition to the database and make effect text box resizable

--- a/index.html
+++ b/index.html
@@ -271,6 +271,11 @@
       text-align: center;
       background: none;
     }
+    textarea {
+      width: 235px;
+      height: 45px;
+      resize: none;
+    }
   </style>
   <body>
     <div id="select">
@@ -331,8 +336,8 @@
       <!-- first element -->
       <div
         class="element"
-        onmouseenter="showElementInfo(event, this)"
-        onmouseleave="hideElementInfo(this)"
+        onmousedown="showElementInfo(event, this)"
+        onmouseup="hideElementInfo(this)"
       >
         <button
           class="close"
@@ -367,6 +372,7 @@
           </datalist>
         </div>
         <div class="allactions">
+          <div></div>
           <div class="action">
             <button
               class="close"
@@ -465,7 +471,12 @@
                   ><input list="eCount" id="config_to" />
                 </div>
                 <div class="block"><input list="eCount" id="com_num" /></div>
-                <div class="block"><input id="effect" /></div>
+                <div class="block">
+                  <textarea
+                    id="effect"
+                    placeholder="Enter the effect(s) of this communication, each separated by ';'"
+                  ></textarea>
+                </div>
               </div>
             </div>
             <div class="add_communication">
