correct all textareas to be resizable and make com count box smaller

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
       text-align: right;
       vertical-align: bottom;
     }
+    #com_num,
     #config_from,
     #config_to {
       width: 53px;
@@ -474,7 +475,9 @@
                 <div class="block">
                   <textarea
                     id="effect"
+                    rows="1"
                     placeholder="Enter the effect(s) of this communication, each separated by ';'"
+                    oninput="OnInput(this)"
                   ></textarea>
                 </div>
               </div>
