show old selections and close element list when load new data and update textarea height when loading data

--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
                     name="means"
                     value="direct"
                     checked
+                    onclick="checkDirect(this)"
                   /><label for="direct_means">Direct</label>
                 </div>
                 <div class="block">
