change condition add from class to id to fix not displaying multiple conditions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="addcom.js" defer></script>
     <script src="addact.js" defer></script>
     <script src="addele.js" defer></script>
-    <script src="interface.js" defer></script>
+    <script src="interface.js"></script>
     <script type="module" src="savepdf.js"></script>
     <script type="module" src="script.js" defer></script>
   </head>
@@ -412,7 +412,7 @@
                   </select>
                 </div>
                 <select
-                  class="add"
+                  id="add"
                   style="width: 50px"
                   onchange="addCondition(this)"
                 >
