add second viz v1 and comment out previous force graph viz

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <script src="addele.js" defer></script>
     <script src="interface.js"></script>
     <script type="module" src="savepdf.js"></script>
-    <script type="module" src="script.js" defer></script>
+    <!-- <script type="module" src="script.js" defer></script> -->
+    <script type="module" src="sketch.js" defer></script>
   </head>
   <style>
     body {
@@ -258,6 +259,7 @@
     #container {
       margin: 0 15px 0 25px;
       border: 2px solid;
+      font-family: Arial, Helvetica, sans-serif;
     }
     #save {
       width: 964px;
