change svg size and draw relation visualisation

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
       margin: 0 15px 0 25px;
       border: 2px solid;
       font-family: Arial, Helvetica, sans-serif;
+      overflow: visible;
     }
     #save {
       width: 964px;
@@ -532,7 +533,8 @@
         <button class="control_button" id="permutate">Permutate</button>
       </div>
     </div>
-    <svg id="container" width="960" height="679"></svg>
+    <!-- <svg id="container" width="960" height="679"></svg> -->
+    <svg id="container" width="1240" height="679"></svg>
     <div id="save">
       <button class="control_button" id="savePDF">Download</button>
     </div>
