update selection bar placeholder text

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           name="interaction_ids"
           style="width: 400px; text-align: center; font-size: 18px"
         >
-          <option value="0">--Select an interaction from the database--</option>
+          <option value="0">--Select an example from the database--</option>
         </select>
         <span>Or</span>
         <input
