--- a/index.html
+++ b/index.html
@@ -292,7 +292,6 @@
         >
           <option value="0">--Select an example from the database--</option>
         </select>
-        <span>Or</span>
         <input
           id="name_interaction"
           style="width: 400px; text-align: center; font-size: 16px"
@@ -433,10 +432,10 @@
                 <div class="ancom_block">To:</div>
                 <div class="ancom_block">Means:</div>
                 <div class="ancom_block">&nbsp</div>
+                <div class="ancom_block" style="margin-top: 8px">Config:</div>
+                <div class="ancom_block" style="margin-top: 8px">Count:</div>
                 <div class="ancom_block">Access:</div>
                 <div class="ancom_block">&nbsp</div>
-                <div class="ancom_block">Config:</div>
-                <div class="ancom_block">Count:</div>
                 <div class="ancom_block">Effect:</div>
               </div>
               <div class="communications">
@@ -474,6 +473,15 @@
                 </div>
                 <div class="block">
                   <input
+                    list="eCount"
+                    id="config_from"
+                    placeholder="From"
+                  /><span style="font-size: 25px">&rarr;</span
+                  ><input list="eCount" id="config_to" placeholder="To" />
+                </div>
+                <div class="block"><input list="eCount" id="com_num" /></div>
+                <div class="block">
+                  <input
                     type="radio"
                     id="public_access"
                     name="access"
@@ -489,11 +497,6 @@
                     value="private"
                   /><label for="private_access">Private</label>
                 </div>
-                <div class="block">
-                  <input list="eCount" id="config_from" /><span>to</span
-                  ><input list="eCount" id="config_to" />
-                </div>
-                <div class="block"><input list="eCount" id="com_num" /></div>
                 <div class="block">
                   <textarea
                     id="effect"
